agrego cristaleria y hielo, agrego atributos y funciones.